--- a/config/boards/shields/corne/corne.zmk.yml
+++ b/config/boards/shields/corne/corne.zmk.yml
@@ -2,12 +2,13 @@ file_format: "1"
 id: corne
 name: Corne
 type: shield
-url: https://github.com/foostan/crkbd
+url: https://github.com/foostan/crkbd/
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
   - keys
 siblings:
-  - cradio_left
-  - cradio_right
-  - cradio_dongle
+  - corne_left
+  - corne_right
+  - corne_dongle
+  - corne_peripheral_left
